# manchkin-and-dragons-game-bots

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.docker.toml  pyproject.toml
config/: config.yaml
runtime/: box-bot  functions
src/color_bot/: interaction.py  main.py
src/doors_bot/: interaction.py  main.py
src/gossip_bot/: interaction.py  main.py
src/hero_bot/: help.py  hero.py  level_up.py  main.py  test.py
src/master_bot/: fight.py  fight_start.py  help.py  main.py
src/staff_bot/: interaction.py  main.py
src/station_bot/: interaction.py  main.py
src/utils/: application.py  application_builder.py  config_model.py  custom_types.py  db_model.py  error_handler.py  minio_client.py  qr_converter.py
